--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
         container_name: pgadmin
         ports: 
             - 5050:80
+        volumes:
+            - ./pgadmin4:/var/lib/pgadmin
         environment:
             PGADMIN_DEFAULT_EMAIL: root
             PGADMIN_DEFAULT_PASSWORD: root
